--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@types/styled-components": "^5.1.24",
     "gatsby-plugin-smoothscroll": "^1.2.0",
     "node-sass": "^7.0.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-reveal": "^1.2.2",
     "react-scripts": "5.0.0",
     "react-transition-group": "^4.4.2",
     "styled-components": "^5.3.5",
@@ -26,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
+  },
+  "homepage": "http://gandi0330.github.io/portfolio-project"
 }
